--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
     <title>Новогодняя викторина</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body oncontextmenu="return false;">
     <div id="background"></div>
 
     <div id="menu">
@@ -20,6 +23,9 @@
         </button>
         <button class="topic-btn" data-topic="history">История</button>
       </div>
+      <a id="exit-button" href="https://maxim-prog292.github.io/select_game_NY/"
+        >Назад</a
+      >
     </div>
 
     <div id="game" class="hidden">
